Prevent to filter on categories in net worth reports

Applying category filters on a networth report yields in false results.
Therefore, all categories are selected by default for this report type
and a modification is prevented.

BUG: 457832
FIXED-IN: 5.2